feat: harden endpoints
